# yami-nabe-quiz

./: .gitignore  Cargo.toml  aaa.txt  bbb.txt  log  run.sh
http/: generate_test.http  wakachi_test.http
src/: Calcprob.rs  calcprob.rs  main.rs  wakachi.rs
static/: corpus.txt  input.txt
