[package]
name = "yami-nabe-quiz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_pcg = "0.3.1"
vibrato = "0.5.1"
zstd = "0.13.0"
rocket = { version="0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.18.0"
tokio = "1.34.0"